--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,25 +1,9 @@
-:root {
-  --White: #FFFFFF;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+@layer base {
+  /* body {
+    background: black;
+  } */
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: var(--White);
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
