--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,18 @@
     font-size: 20px;
   }
 
+  h4 {
+    font-size: 18px;
+  }
+
+  h5 {
+    font-size: 14px;
+  }
+
+  li {
+    font-size: 18px;
+  }
+
   #Menu-items {
     box-shadow: 0 10px 25px 1px #e5e7eb;
   }
